--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "git-cz": "^4.7.6",
+    "lodash": "^4.17.21",
     "next": "11.0.1",
     "react": "17.0.2",
+    "react-countup": "^4.4.0",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
